@startuml

title __REQUEST's Class Diagram__\n

  package  {
    package Model {
      package Model.Request {
        class Request {
            - vacationKey : String
            - sellerKey : String
            - buyerKey : String
            - approved : boolean
            - timestamp : int
            - state : String
            - exchange : boolean
            - vacationToExchange : int
            {static} + states : String[]
            + Request()
            + Request()
            + getVacationKey()
            + setVacationKey()
            + getSellerKey()
            + setSellerKey()
            + getBuyerKey()
            + setBuyerKey()
            + getApproved()
            + setApproved()
            + setApproved()
            + getTimestamp()
            + setTimestamp()
            + setTimestamp()
            + getState()
            + setState()
            + isExchange()
            + setExchange()
            + getVacationToExchange()
            + setVacationToExchange()
        }
      }
    }
  }
  

  package  {
    package Model {
      package Model.Request {
        class RequestModel {
            + RequestModel()
            + updateTable()
            - getCurrentTimeStamp()
            + readDataFromDB()
            + insertRequestToTable()
            + finishPurchase()
            + updateApprovedRequest()
            + getVacationModel()
        }
      }
    }
  }
  

  RequestModel -up-|> ACRUDModel
  RequestModel o-- VacationModel : vacationModel


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
